# AkurAI-Router

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  akurai-deploy.toml  deploy.sh
scripts/: validate.sh
src/: accounts.rs  auth.rs  cli.rs  config.rs  http.rs  json.rs  landing.rs  main.rs  oauth.rs  upstream.rs  util.rs
