[package]
name = "akurai-router"
version = "0.1.0"
edition = "2024"
description = "A std-only OpenAI-compatible router for Codex OAuth endpoints."
license = "MIT"
repository = "https://github.com/olibuijr/AkurAI-Router"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
